elements/pfe-button/BaseButton.scss
/* ... */
:host([disabled]) ::slotted(button)::after,
::slotted(button[aria-disabled=true])::after {
  border-color: var(--pf-c-button--disabled--after--BorderColor, transparent) !important;
}

/******************************
 *                            *
 *           BLOCK            *
 *                            *
 ******************************/

:host([block]),
:host([block]) #container,
:host([block]) ::slotted(button) {
  display: flex !important;
  width: 100% !important;
  justify-content: center !important;
}

/******************************
 *                            *
 *           LARGE            *
 *                            *
 ******************************/

:host([size=large]) ::slotted(button) {
  --pf-c-button--PaddingTop: var(--pf-c-button--m-display-lg--PaddingTop,
    var(--pf-global--spacer--md, 1rem));
  --pf-c-button--PaddingRight: var(--pf-c-button--m-display-lg--PaddingRight,
    var(--pf-global--spacer--xl, 2rem));
  --pf-c-button--PaddingBottom: var(--pf-c-button--m-display-lg--PaddingBottom,
    var(--pf-global--spacer--md, 1rem));
  --pf-c-button--PaddingLeft: var(--pf-c-button--m-display-lg--PaddingLeft,
    var(--pf-global--spacer--xl, 2rem));
  --pf-c-button--FontWeight: var(--pf-c-button--m-display-lg--FontWeight,
    var(--pf-global--FontWeight--bold, 700));
}

/******************************
 *                            *
 *           SMALL            *
 *                            *
 ******************************/

:host([size=small]) ::slotted(button) {
  --pf-c-button--FontSize: var(--pf-c-button--m-small--FontSize,
    var(--pf-global--FontSize--md, 1rem));
}

/******************************
 *                            *
 *            ICON            *
 *                            *
 ******************************/

[part=icon] {
  display: none;
  pointer-events: none;
}

.hasIcon {
  position: relative;
  display: flex;
  align-items: center;
}

.hasIcon [part=icon] {
  display: inline-flex;
  align-items: center;
  position: absolute;
  aspect-ratio: 1/1;
  width: 32px;
  left: 8px;
  margin-inline-end: var(--pf-c-button__icon--m-start--MarginRight,
    var(--pf-global--spacer--xs, 0.25rem));
}

:host(:not([disabled])) .hasIcon [part=icon] {
  cursor: pointer;
}

[part=icon] ::slotted(*) {
  width: 16px;
  max-width: 16px;
  height: 16px;
  max-height: 16px;
}

.hasIcon ::slotted(button) {
  --pf-c-button--PaddingLeft: 36px;
  position: absolute;
  inset: 0;
}

/******************************
 *                            *
 *          DANGER            *
 *                            *
 ******************************/

:host([danger]) ::slotted(button) {
  color: var(--pf-c-button--m-danger--Color,
    var(--pf-global--Color--light-100, #fff)) !important;
  background-color: var(--pf-c-button--m-danger--BackgroundColor,
    var(--pf-global--danger-color--100, #c9190b)) !important;
}

